<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Jandan</string>

    <string name="tab_item_ranking">Ranking</string>
    <string name="tab_item_posts">Posts</string>
    <string name="tab_item_pics">Pics</string>
    <string name="tab_item_jokes">Jokes</string>
    <string name="tab_item_movies">Movies</string>

    <string name="drawer_home">Home</string>
    <string name="drawer_read_later">ReadLater</string>
    <string name="drawer_favorites">Favorites</string>

    <string name="drawer_preference">Preference</string>
    <string name="drawer_about">About</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="drawer_profile_add">Add account</string>
    <string name="post_card_more_menu_favo">Add to favorite</string>
    <string name="post_card_more_menu_later">Read later</string>

    <string name="launch_item_reader_transition">launch_item_reader_transition</string>
    <string name="press_again_exit">Press Again To Exit</string>
    <string name="meta_format_comment_count">%d comments</string>
    <string name="post_detail_no_more_comments">No more comments.</string>
    <string name="loaded_numbers_comments">%d comments loaded.</string>
    <string name="meta_format_all_comment_count">Comments (%d)</string>
    <string name="comment_click_to_refresh">Refresh</string>
    <string name="comment_no_blank">Blank Content</string>
    <string name="comment_email_format_error">Format Error</string>
    <string name="comment_say_after_at_somebody">Blank Comment</string>
    <string name="comment_success">Sent!</string>
    <string name="comment_failed">Failed.</string>
    <string name="retrofit_no_internet">No Internet.</string>
    <string name="retrofit_socket_timeout">Internet Timeout.</string>
    <string name="retrofit_unknown">Unknown Error.</string>
    <string name="vote_success">Voted.</string>
    <string name="vote_already">Already voted.</string>
    <string name="favo_deleted">Deleted.</string>
    <string name="activity_reader">Jandan Reader</string>
    <string name="activity_setting">Preference</string>
    <string name="activity_hdimage_viewer">Jandan HD Viewer</string>
    <string name="preference_username">Username</string>
    <string name="preference_email">Email</string>
    <string name="preference_general">General</string>
    <string name="preference_pics">Pics</string>
    <string name="preference_user_summary">This will be used when you post a comment</string>
    <string name="preference_image_quality">Image Quality</string>
    <string name="preference_gif_quality">GIF Quality</string>
    <string name="array_image_high">High</string>
    <string name="array_image_medium">Medium</string>
    <string name="array_image_low">Low</string>
    <string name="preference_other">Misc</string>
    <string name="preference_clear_cache">Clear Cache</string>
    <string name="preference_filter">Filter</string>
    <string name="preference_filter_xx_gt">Filter item with XX greater than setting</string>
    <string name="preference_filter_xx_gt_oo">Filter item with XX greate than OO</string>
    <string name="preference_about">About</string>
    <string name="preference_feedback">Feedback</string>
    <string name="preference_about_author">About author</string>
    <string name="preference_version">Version 0.9.0</string>
    <string name="preference_drawer_image_by_lackar">Vuvuzela Image by Lackar</string>
    <string name="preference_thanks">Thanks</string>
    <string name="pic_filter_show">Show</string>
    <string name="pic_filter_hide">Hide</string>
    <string name="pic_filter_show_again">Show again</string>
    <string name="pic_filter_hint">Hidden by Chaozai Ji</string>
    <string name="comment_title">Comment</string>
    <string name="comment_action_copy">Copy</string>
    <string name="comment_action_reply">Reply</string>
    <string name="comment_action_last_comment">Last comment</string>
    <string name="app_slogan">No news on earth.</string>
    <string name="preference_filter_hint">0 for not filter</string>
    <string name="feedback_info">Type your feedback below</string>
    <string name="feedback_name">Anno</string>
    <string name="array_1">1</string>
    <string name="array_2">2</string>
    <string name="array_3">3</string>
    <string name="item_reader_menu_favo">Add to favorite</string>
    <string name="item_reader_menu_share">Share</string>
    <string name="image_hd">View HD</string>
    <string name="image_save">Save to local</string>
</resources>
