<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="info.xudshen.jandan.utils.RealtimeTimeUtils" />

        <import type="info.xudshen.jandan.utils.HtmlHelper" />

        <import type="android.view.View" />

        <variable
            name="comment"
            type="info.xudshen.jandan.view.model.CommentDialogModel" />
    </data>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/selectableItemBackground"
        android:backgroundTint="@color/md_white_1000"
        android:columnCount="4"
        android:rowCount="5">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_columnSpan="4"
            android:paddingBottom="10dp"
            android:paddingLeft="16dp"
            android:paddingTop="12dp"
            android:text="@string/comment_action_last_comment"
            android:visibility="@{comment.hasPreviousComment ? View.VISIBLE : View.GONE}" />

        <TextView
            style="@style/PostDetailMetaHighlight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:text="@{comment.name}"
            android:visibility="@{comment.hasPreviousComment ? View.VISIBLE : View.GONE}" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_marginLeft="12dp"
            android:text="@{RealtimeTimeUtils.realtime(comment.date)}"
            android:visibility="@{comment.hasPreviousComment ? View.VISIBLE : View.GONE}" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:text="@{HtmlHelper.voteOO(comment.votePositive)}"
            android:visibility="@{comment.hasPreviousComment ? View.VISIBLE : View.GONE}" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:paddingRight="16dp"
            android:text="@{HtmlHelper.voteXX(comment.voteNegative)}"
            android:visibility="@{comment.hasPreviousComment ? View.VISIBLE : View.GONE}" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_columnSpan="4"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="5dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:visibility="@{comment.hasPreviousComment ? View.VISIBLE : View.GONE}"
            app:richText="@{comment.content}" />

        <View
            style="@style/Divider"
            android:layout_columnSpan="4"
            android:visibility="@{comment.hasPreviousComment ? View.VISIBLE : View.GONE}" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_columnSpan="4"
            android:orientation="horizontal">

            <Button
                android:id="@+id/comment_copy_btn"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/comment_action_copy" />

            <Button
                android:id="@+id/comment_reply_btn"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/comment_action_reply" />
        </LinearLayout>
    </GridLayout>
</layout>